--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon app.js",
-    "start":"nodemon app.js",
+    "start": "node app.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
@@ -21,7 +21,6 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
     "cookie-session": "^1.3.3",
-    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
     "nodemon": "^2.0.1",
